cmake_minimum_required(VERSION 3.13)
project(DataStructureExperimentNwpu2019)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructureExperimentNwpu2019 main.cpp
        #        Exercise1_LinkedList/Solution.cpp Exercise1_LinkedList/Solution.h
        #        Exercise1_LinkedList/LeetCode23.cpp Exercise1_LinkedList/Test1_1.cpp
        #        Exercise1_LinkedList/Test1_2.cpp Exercise2_Stack_Queue/Stack.cpp
        #        Exercise2_Stack_Queue/Stack.h Exercise2_Stack_Queue/Queue.cpp
        #        Exercise2_Stack_Queue/Queue.h Exercise2_Stack_Queue/LeetCode739.cpp
        #        Exercise2_Stack_Queue/LeetCode84.cpp Exercise2_Stack_Queue/Test2_1.cpp
        #        Exercise2_Stack_Queue/Test2_2.cpp Exercise2_Stack_Queue/Test2_1.cpp
        #        Exercise2_Stack_Queue/Test2_1.h
        #        Exercise3_Tree/BinaryTree.cpp
        #        Exercise3_Tree/BinaryTree.h Exercise3_Tree/LeetCode145.cpp
        #        Exercise3_Tree/LeetCode145.h Exercise3_Tree/LeetCode654.cpp
        #        Exercise3_Tree/LeetCode654.h
#        Test3_Tree/Stack.h
#        Test3_Tree/Stack.cpp
#        Test3_Tree/TNode.cpp Test3_Tree/TNode.h
#        Test3_Tree/Test3_1.cpp Test3_Tree/Test3_1.h
#        Test3_Tree/Test3_2.h
#        Test3_Tree/Test3_2.cpp
         Exercise4_Graph/LeetCode841.cpp Exercise4_Graph/LeetCode841.h Exercise4_Graph/LeetCode765.cpp Exercise4_Graph/LeetCode765.h)